--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -76,4 +76,8 @@
 
     <color name="call_buttons_background">#BF999999</color>
     <color name="favorite_icon_tint">#FFCC00</color>
+
+    <!-- shimmer element colors -->
+    <color name="nc_shimmer_default_color">#D7D7D7</color>
+    <color name="nc_shimmer_darker_color">#B4B4B4</color>
 </resources>
