--- a/app/src/main/res/layout/controller_entry_menu.xml
+++ b/app/src/main/res/layout/controller_entry_menu.xml
@@ -20,9 +20,13 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/bg_bottom_sheet">
+    android:background="@color/bg_bottom_sheet"
+    android:paddingStart="@dimen/standard_padding"
+    android:paddingTop="@dimen/standard_padding"
+    android:paddingEnd="@dimen/standard_half_padding">
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/ok_button"
@@ -31,26 +35,23 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/text_input_layout"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginTop="@dimen/standard_half_margin"
+        android:layout_marginBottom="@dimen/standard_half_margin"
         android:alpha="0.7"
         android:background="@color/bg_default"
         android:enabled="false"
         android:text="@string/nc_proceed"
+        android:textAllCaps="false"
         android:textColor="@color/colorPrimary" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/text_input_layout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_horizontal_margin"
-        android:layout_marginBottom="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="@dimen/standard_half_margin"
         android:layout_toStartOf="@id/smileyButton"
         app:errorTextAppearance="@style/ErrorAppearance"
-        app:helperText=""
         app:passwordToggleDrawable="@drawable/asl_password_visibility"
         app:passwordToggleTint="@color/grey_600">
 
@@ -67,14 +68,15 @@
 
     <ImageButton
         android:id="@+id/smileyButton"
-        android:layout_width="36dp"
-        android:visibility="gone"
-        android:layout_height="36dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="48dp"
+        android:layout_height="match_parent"
         android:layout_alignBottom="@id/text_input_layout"
         android:layout_alignParentEnd="true"
+        android:layout_marginStart="-4dp"
         android:background="@color/transparent"
         android:src="@drawable/ic_insert_emoticon_black_24dp"
-        android:tint="@color/emoji_icons" />
+        android:tint="@color/emoji_icons"
+        android:visibility="gone"
+        tools:visibility="visible" />
 
 </RelativeLayout>
