proper quote coloring in dark mode
Signed-off-by: Andy Scherzinger <info@andy-scherzinger.de>

--- a/app/src/main/res/layout/item_message_quote.xml
+++ b/app/src/main/res/layout/item_message_quote.xml
@@ -45,6 +45,7 @@
         android:layout_marginEnd="8dp"
         android:layout_toEndOf="@id/quoteColoredView"
         android:ellipsize="end"
+        android:textColor="@color/textColorMaxContrast"
         android:textSize="12sp"
         tools:text="Jane Doe" />
 
