--- a/app/src/main/res/xml/file_provider_paths.xml
+++ b/app/src/main/res/xml/file_provider_paths.xml
@@ -23,6 +23,6 @@
         name="files"
         path="/" />
     <cache-path
-        name="cachedFiles"
+        name="cache"
         path="/" />
 </paths>
