a11y file browser items
Signed-off-by: Andy Scherzinger <info@andy-scherzinger.de>

--- a/app/src/main/res/layout/rv_item_browser_file.xml
+++ b/app/src/main/res/layout/rv_item_browser_file.xml
@@ -53,6 +53,7 @@
         android:layout_height="16dp"
         android:layout_below="@id/file_icon"
         android:layout_alignStart="@+id/file_icon"
+        android:contentDescription="@string/encrypted"
         android:src="@drawable/ic_lock_grey600_24px" />
 
     <TextView
