--- a/app/src/main/res/layout/call_states.xml
+++ b/app/src/main/res/layout/call_states.xml
@@ -2,6 +2,8 @@
   ~ Nextcloud Talk application
   ~
   ~ @author Mario Danic
+  ~ @author Andy Scherzinger
+  ~ Copyright (C) 2021 Andy Scherzinger <info@andy-scherzinger.de>
   ~ Copyright (C) 2017-2019 Mario Danic <mario@lovelyhq.com>
   ~
   ~ This program is free software: you can redistribute it and/or modify
@@ -29,6 +31,7 @@
         android:layout_height="48dp"
         android:layout_above="@id/callStateTextView"
         android:layout_centerHorizontal="true"
+        android:contentDescription="@null"
         android:src="@drawable/ic_signal_wifi_off_white_24dp"
         android:visibility="gone" />
 
