--- a/app/src/main/res/layout/controller_call_notification.xml
+++ b/app/src/main/res/layout/controller_call_notification.xml
@@ -2,6 +2,8 @@
   ~ Nextcloud Talk application
   ~
   ~ @author Mario Danic
+  ~ @author Andy Scherzinger
+  ~ Copyright (C) 2021 Andy Scherzinger <info@andy-scherzinger.de>
   ~ Copyright (C) 2017-2018 Mario Danic <mario@lovelyhq.com>
   ~
   ~ This program is free software: you can redistribute it and/or modify
@@ -27,6 +29,7 @@
         android:id="@+id/backgroundImageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:contentDescription="@null"
         android:scaleType="centerCrop"
         android:src="@color/grey950"
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
@@ -48,7 +51,7 @@
             app:backgroundImage="@color/nc_darkGreen"
             app:placeholderImage="@drawable/ic_call_white_24dp"
             app:roundAsCircle="true"
-            tools:visibility="visible"/>
+            tools:visibility="visible" />
 
         <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/callControlHangupView"
@@ -68,7 +71,7 @@
             app:backgroundImage="@color/nc_darkGreen"
             app:placeholderImage="@drawable/ic_videocam_white_24px"
             app:roundAsCircle="true"
-            tools:visibility="visible"/>
+            tools:visibility="visible" />
     </LinearLayout>
 
     <RelativeLayout
@@ -105,11 +108,11 @@
             android:id="@+id/incomingCallDescriptionTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/conversationNameTextView"
             android:text="@string/nc_call_incoming"
             android:textAlignment="center"
             android:textColor="@color/controller_call_incomingCallTextView"
-            android:textSize="16sp"
-            android:layout_below="@+id/conversationNameTextView" />
+            android:textSize="16sp" />
 
     </RelativeLayout>
 
