--- a/app/src/main/res/layout/rv_item_app.xml
+++ b/app/src/main/res/layout/rv_item_app.xml
@@ -2,6 +2,8 @@
   ~ Nextcloud Talk application
   ~
   ~ @author Mario Danic
+  ~ @author Andy Scherzinger
+  ~ Copyright (C) 2021 Andy Scherzinger <info@andy-scherzinger.de>
   ~ Copyright (C) 2017 Mario Danic <mario@lovelyhq.com>
   ~
   ~ This program is free software: you can redistribute it and/or modify
@@ -32,6 +34,7 @@
         android:layout_height="24dp"
         android:layout_centerVertical="true"
         android:layout_marginStart="16dp"
+        android:contentDescription="@null"
         android:focusable="false"
         android:focusableInTouchMode="false"
         tools:src="@drawable/ic_add_grey600_24px" />
