--- a/app/src/main/res/drawable/shape_lock_bubble.xml
+++ b/app/src/main/res/drawable/shape_lock_bubble.xml
@@ -23,7 +23,7 @@
     <item>
         <shape
             android:shape="oval">
-            <solid android:color="@color/white"/>
+            <solid android:color="@color/bg_default"/>
         </shape>
     </item>
     <item android:drawable="@drawable/ic_lock_grey600_24px"/>
