--- a/app/src/main/res/menu/chat_message_menu.xml
+++ b/app/src/main/res/menu/chat_message_menu.xml
@@ -15,6 +15,12 @@
         app:showAsAction="always" />
 
     <item
+        android:id="@+id/action_reply_privately"
+        android:icon="@drawable/ic_reply_white_24dp"
+        android:title="@string/nc_reply_privately"
+        app:showAsAction="always" />
+
+    <item
         android:id="@+id/action_delete_message"
         android:icon="@drawable/ic_delete_white_24dp"
         android:title="@string/nc_delete_message"
