--- a/app/src/main/res/menu/chat_message_menu.xml
+++ b/app/src/main/res/menu/chat_message_menu.xml
@@ -4,25 +4,25 @@
 
     <item
         android:id="@+id/action_copy_message"
-        android:icon="@drawable/ic_content_copy_white_24dp"
+        android:icon="@drawable/ic_content_copy"
         android:title="@string/nc_copy_message"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/action_reply_to_message"
-        android:icon="@drawable/ic_reply_white_24dp"
+        android:icon="@drawable/ic_reply"
         android:title="@string/nc_reply"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/action_reply_privately"
-        android:icon="@drawable/ic_reply_white_24dp"
+        android:icon="@drawable/ic_reply"
         android:title="@string/nc_reply_privately"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/action_delete_message"
-        android:icon="@drawable/ic_delete_white_24dp"
+        android:icon="@drawable/ic_delete"
         android:title="@string/nc_delete_message"
         app:showAsAction="always" />
 </menu>
