user proper activity context to grab themed color for item header for mention items
Signed-off-by: Andy Scherzinger <info@andy-scherzinger.de>

--- a/app/src/main/res/layout/rv_item_mention.xml
+++ b/app/src/main/res/layout/rv_item_mention.xml
@@ -58,7 +58,7 @@
             android:layout_height="wrap_content"
             android:ellipsize="middle"
             android:singleLine="true"
-            android:textAppearance="?android:attr/textAppearanceListItem"
+            android:textAppearance="@style/ListItem"
             tools:text="Call item text" />
 
         <androidx.emoji.widget.EmojiTextView
