migrate chat controller to native view binding
Signed-off-by: Andy Scherzinger <info@andy-scherzinger.de>

--- a/app/src/main/res/layout/controller_chat.xml
+++ b/app/src/main/res/layout/controller_chat.xml
@@ -26,7 +26,9 @@
     android:animateLayoutChanges="true"
     android:background="@color/bg_default">
 
-    <include layout="@layout/lobby_view"
+    <include
+        android:id="@+id/lobby"
+        layout="@layout/lobby_view"
         android:visibility="gone"
         tools:visibility="visible"/>
 
