--- a/app/src/main/res/layout/controller_entry_menu.xml
+++ b/app/src/main/res/layout/controller_entry_menu.xml
@@ -75,8 +75,8 @@
         android:background="@color/transparent"
         android:contentDescription="@string/nc_add_emojis"
         android:src="@drawable/ic_insert_emoticon_black_24dp"
-        android:tint="@color/emoji_icons"
         android:visibility="gone"
+        app:tint="@color/emoji_icons"
         tools:visibility="visible" />
 
 </RelativeLayout>
