--- a/app/src/main/res/layout/account_item.xml
+++ b/app/src/main/res/layout/account_item.xml
@@ -22,6 +22,7 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="72dp"
     android:layout_margin="4dp"
@@ -52,7 +53,9 @@
                 android:layout_marginEnd="1dp"
                 android:layout_marginBottom="1dp"
                 android:contentDescription="@string/avatar"
-                android:src="@drawable/ic_user"
+                android:src="@drawable/account_circle_48dp"
+                fresco:placeholderImage="@drawable/account_circle_48dp"
+                fresco:failureImage="@drawable/account_circle_48dp"
                 app:roundAsCircle="true"/>
 
             <ImageView
